spec/v1/examples/data/rendered/apps/data/platform-postgres/service.yaml
# GENERATED. Never hand-edit.
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: data-system
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: platform-postgres
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  selector:
    app.kubernetes.io/instance: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
    - name: metrics
      port: 9187
      targetPort: metrics
