spec/v1/examples/data/rendered/apps/data/platform-postgres/networkpolicy.yaml
# GENERATED. Never hand-edit.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: data-system
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: platform-postgres
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: prometheus
      ports:
        - protocol: TCP
          port: 9187
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-backup
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: secrets-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: vault
      ports:
        - protocol: UDP
          port: 8200
        - protocol: TCP
          port: 8200
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-backup
  namespace: data-system
  labels:
    app.kubernetes.io/name: postgres-backup
    app.kubernetes.io/instance: postgres-backup
    app.kubernetes.io/part-of: platform-postgres
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: postgres-backup
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 203.0.113.0/24
      ports:
        - protocol: TCP
          port: 443
